Print the causes the same way round twice, and refuse a part no reading saw
Parts are keyed by the node the tree holds, which is an identity, and a map keyed on one iterates by
where the addresses landed — so a value with two conjuncts short of the bounds printed its two causes
in whichever order the run happened to give them. The rules keep the order the declaration writes
them in, and the causes are sorted, because they come from three producers and there is no one order
they arrive in.

And a part neither reading saw is the two walks disagreeing about what the clause is made of, not a
shape a walk has no rule for. Thrown as an ordinary failure it was swallowed into a value with
nothing to say, which reads exactly like a value whose rules were all read; `TheCheckDisagreesWithItself`
is the boundary's own word for the difference.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>